deployment/k8s/app/03-devapp-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devapp-web
  labels:
    app: devapp-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devapp-web
  template:
    metadata:
      labels:
        app: devapp-web
    spec:
      containers:
      - name: devapp-web
        image: devapp/devapp-web:v3
        imagePullPolicy: Never
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
          failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: devapp-web
  labels:
    app: devapp-web
spec:
  selector:
    app: devapp-web
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
